tests/tests/snapshots/golden__ir__sqlite-notes.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "SqliteNotes",
  "multi_service": false,
  "services": [
    {
      "id": 0,
      "name": "SqliteNotes"
    }
  ],
  "nodes": [
    {
      "id": 0,
      "service": 0,
      "kind": "Database",
      "name": "default",
      "engine": "Sqlite"
    },
    {
      "id": 1,
      "service": 0,
      "kind": "Api",
      "name": "Note",
      "request": 0,
      "config": {
        "method": "Post",
        "path": null,
        "scope": null
      }
    },
    {
      "id": 2,
      "service": 0,
      "kind": "Service",
      "name": "NoteStore",
      "signature": null
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 1,
      "to": 2,
      "kind": "RequestFlow"
    },
    {
      "id": 1,
      "from": 2,
      "to": 0,
      "kind": "DataFlow"
    }
  ],
  "records": [
    {
      "name": "Note",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "title",
          "ty": {
            "type": "Str"
          }
        }
      ],
      "kind": "Data"
    }
  ],
  "tables": [],
  "pipelines": [],
  "resources": [
    {
      "name": "Note",
      "service_owner": 0,
      "api": 1,
      "service": 2,
      "database": 0,
      "cache": null,
      "auth": null,
      "record": 0,
      "config": {
        "cache_ttl": 300,
        "page_size": 100,
        "read_scope": null,
        "write_scope": null
      }
    }
  ],
  "event_streams": []
}
